# tarea_1_analisis

./: .gitignore  CMakeLists.txt
include/: algoritmos.hh  arbolArreglo.hh  arbolHMI_HD.hh  arbolHMI_HD_ptr.hh  arbolListaHijos.hh  arbol_lista.hh  colaLSE.hh  tiempoDuracion.hh  traductor.hh
src/: CMakeLists.txt  algoritmos.cc  arbolArreglo.cc  arbolHMI_HD.cc  arbolHMI_HD_ptr.cc  arbolListaHijos.cc  arbol_lista.cc  colaLSE.cc  main.cc  tiempoDuracion.cc  traductor.cc
tests/: CMakeLists.txt  pruebas_arboles.cc
